--- a/Sobre_In.html
+++ b/Sobre_In.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Endless</title>
+  <title>Endless Book</title>
   <link rel="stylesheet" href="./sobre_st.css">
 </head>
 
 <body>
   <header id="header">
-    <a id="Book" href="">Endless</a>
+    <a id="Book" href="">Endless Book</a>
     <nav id="nav">
       <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">Menu
         <span id="hamburger"></span>
